AWS-CloudFormation-Stacks/EC2-LAMP-UserData.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template to create an EC2 instance with LAMP stack

Parameters:
  AMIId:
    Description: AMI ID for the EC2 instance
    Type: String
    Default: "ami-0d3d751381e72e605"  # Replace with a default AMI ID if desired

  VPCId:
    Description: VPC ID for the security group and subnet
    Type: AWS::EC2::VPC::Id

  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: "t3.micro"
    AllowedValues: 
      - "t3.micro"
      - "t3.small"
      - "t3.medium"
    ConstraintDescription: "must be a valid EC2 instance type."

  InstancePassword:
    Description: Password for the ec2-user
    Type: String
    NoEcho: true
    MinLength: 8
    MaxLength: 30
    ConstraintDescription: Password must be between 8 and 30 characters

  MySqlRootPassword:
    Description: Password for the MySql
    Type: String
    NoEcho: true
    MinLength: 8
    MaxLength: 30
    ConstraintDescription: Password must be between 8 and 30 characters

Resources:
  EC2Instance:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: !Ref AMIId
      InstanceType: !Ref InstanceType
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      UserData:
        Fn::Base64: 
          !Sub |
            #!/bin/bash
            dnf update -y
            dnf install -y httpd wget  php-fpm php-mysqli php-json php php-devel php-mbstring php-xml
            wget https://dev.mysql.com/get/mysql80-community-release-el9-1.noarch.rpm
            rpm --import https://repo.mysql.com/RPM-GPG-KEY-mysql-2023
            dnf install mysql80-community-release-el9-1.noarch.rpm -y
            dnf install mysql-community-server mysql-community-client -y

            # Start httpd (Apache) service
            systemctl start httpd
            systemctl enable httpd

            # Start MySQL service
            systemctl start mysqld
            systemctl enable mysqld

            # Start PHP-FPM service
            systemctl start php-fpm
            systemctl enable php-fpm

            # Create index.html
            echo "<html><body><h1>Welcome to My EC2 Instance</h1></body></html>" > /var/www/html/index.html

            # Create info.php
            echo "<?php phpinfo(); ?>" > /var/www/html/info.php

            # To install phpMyAdmin
            cd /var/www/html
            wget https://www.phpmyadmin.net/downloads/phpMyAdmin-latest-all-languages.tar.gz
            mkdir phpMyAdmin && tar -xvzf phpMyAdmin-latest-all-languages.tar.gz -C phpMyAdmin --strip-components 1
            rm phpMyAdmin-latest-all-languages.tar.gz

            # Enable SSH password authentication
            sed -i 's/PasswordAuthentication no/PasswordAuthentication yes/' /etc/ssh/sshd_config
            systemctl restart sshd

            # Set password for the 'ec2-user' using chpasswd and a here document
            echo 'ec2-user:${InstancePassword}' | chpasswd


            # # Secure MySQL installation (optional, for production use)
            # temp_password=$(sudo grep 'temporary password' /var/log/mysqld.log | awk '{print $NF}')

            # mysql_secure_installation <<EOF
            # $temp_password
            # ${MySqlRootPassword}
            # ${MySqlRootPassword}
            # n
            # y
            # y
            # y
            # y
            # EOF

            # Restart LAMP Services
            systemctl restart mysqld
            systemctl restart httpd
            systemctl restart php-fpm

      Tags:
        - Key: Name
          Value: "EC2InstanceWithLAMPStack"

  InstanceSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Enable SSH (22), HTTP (80), and MySQL (3306) access"
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "22"
          ToPort: "22"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: "tcp"
          FromPort: "80"
          ToPort: "80"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: "tcp"
          FromPort: "3306"
          ToPort: "3306"
          CidrIp: "0.0.0.0/0"

Outputs:
  InstanceId:
    Description: The ID of the created EC2 instance
    Value: !Ref EC2Instance
    Export:
      Name: !Sub "${AWS::StackName}-InstanceId"

  InstancePublicIp:
    Description: The public IP address of the EC2 instance
    Value: !GetAtt EC2Instance.PublicIp
    Export:
      Name: !Sub "${AWS::StackName}-InstancePublicIp"
